force-app/main/default/objects/Doctor_c_x__x/Doctor_c_x__x.object-meta.xml
<CustomObject>
    <externalDataSource>DoctorSoap</externalDataSource>
    <externalName>Doctor_c__x</externalName>
    <label>Doctor</label>
    <pluralLabel>Doctors</pluralLabel>
</CustomObject>