force-app/main/default/objects/Doctor_c_x__x/fields/Birth_Day_c_c__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day_c_c__c</fullName>
    <externalDeveloperName>Birth_Day_c__c</externalDeveloperName>
    <label>Birth Day</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>