force-app/main/default/objects/Doctor_c_x__x/fields/CreatedById_c__c.field-meta.xml
<CustomField>
    <fullName>CreatedById_c__c</fullName>
    <externalDeveloperName>CreatedById__c</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>