force-app/main/default/objects/Doctor_c_x__x/fields/CreatedDate_c__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_c__c</fullName>
    <externalDeveloperName>CreatedDate__c</externalDeveloperName>
    <label>Created Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>