force-app/main/default/objects/Doctor_c_x__x/fields/Email_c_c__c.field-meta.xml
<CustomField>
    <fullName>Email_c_c__c</fullName>
    <externalDeveloperName>Email_c__c</externalDeveloperName>
    <label>Email</label>
    <type>Email</type>
</CustomField>