force-app/main/default/objects/Doctor_c_x__x/fields/Geolocation_Longitude_s_c__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Longitude_s_c__c</fullName>
    <externalDeveloperName>Geolocation_Longitude_s__c</externalDeveloperName>
    <label>Geolocation (Longitude)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>