force-app/main/default/objects/Doctor_c_x__x/fields/IsDeleted_c__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsDeleted__c</externalDeveloperName>
    <label>Deleted</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>