force-app/main/default/objects/Doctor_c_x__x/fields/LastModifiedById_c__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById_c__c</fullName>
    <externalDeveloperName>LastModifiedById__c</externalDeveloperName>
    <label>Last Modified By ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>