force-app/main/default/objects/Doctor_c_x__x/fields/LastModifiedDate_c__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate_c__c</fullName>
    <externalDeveloperName>LastModifiedDate__c</externalDeveloperName>
    <label>Last Modified Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>