force-app/main/default/objects/Doctor_c_x__x/fields/LastReferencedDate_c__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate_c__c</fullName>
    <externalDeveloperName>LastReferencedDate__c</externalDeveloperName>
    <label>Last Referenced Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>