force-app/main/default/objects/Doctor_c_x__x/fields/LastViewedDate_c__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate_c__c</fullName>
    <externalDeveloperName>LastViewedDate__c</externalDeveloperName>
    <label>Last Viewed Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>