force-app/main/default/objects/Doctor_c_x__x/fields/Name_c__c.field-meta.xml
<CustomField>
    <fullName>Name_c__c</fullName>
    <externalDeveloperName>Name__c</externalDeveloperName>
    <label>Doctor Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>