force-app/main/default/objects/Doctor_c_x__x/fields/OwnerId_c__c.field-meta.xml
<CustomField>
    <fullName>OwnerId_c__c</fullName>
    <externalDeveloperName>OwnerId__c</externalDeveloperName>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>