force-app/main/default/objects/Doctor_c_x__x/fields/Photo_c_c__c.field-meta.xml
<CustomField>
    <fullName>Photo_c_c__c</fullName>
    <externalDeveloperName>Photo_c__c</externalDeveloperName>
    <label>Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>