force-app/main/default/objects/Doctor_c_x__x/fields/Reset_Birthday_Email_System_c_c__c.field-meta.xml
<CustomField>
    <fullName>Reset_Birthday_Email_System_c_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Reset_Birthday_Email_System_c__c</externalDeveloperName>
    <label>Reset Birthday Email System</label>
    <type>Checkbox</type>
</CustomField>