force-app/main/default/objects/Doctor_c_x__x/fields/Search_Counter_c_c__c.field-meta.xml
<CustomField>
    <fullName>Search_Counter_c_c__c</fullName>
    <externalDeveloperName>Search_Counter_c__c</externalDeveloperName>
    <label>Search Counter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>