force-app/main/default/objects/Doctor_c_x__x/fields/Speciality_c_c__c.field-meta.xml
<CustomField>
    <fullName>Speciality_c_c__c</fullName>
    <externalDeveloperName>Speciality_c__c</externalDeveloperName>
    <label>Speciality</label>
    <length>40</length>
    <type>Text</type>
</CustomField>