force-app/main/default/objects/Doctor_c_x__x/fields/Street_c_c__c.field-meta.xml
<CustomField>
    <fullName>Street_c_c__c</fullName>
    <externalDeveloperName>Street_c__c</externalDeveloperName>
    <label>Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>