force-app/main/default/objects/Doctor_c_x__x/fields/SystemModstamp_c__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp_c__c</fullName>
    <externalDeveloperName>SystemModstamp__c</externalDeveloperName>
    <label>System Modstamp</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>